--- a/APP_M&N/.classpath
+++ b/APP_M&N/.classpath
@@ -47,6 +47,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/App-M&amp;N-Entidades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/APP_M&amp;N_ENTIDADES"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
